# metropolis

./: .gitlab-ci.yml  .gitlab-ci.yml.swp  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/button/: .main.rs.swo  .main.rs.swp  main.rs
examples/canvas_struct/: main.rs
examples/count1/: main.rs
examples/curve1/: .main.rs.swp  main.rs
examples/gravity/: .main.rs.swn  .main.rs.swo  .main.rs.swp  main.rs
examples/image/: .main.rs.swp  main.rs
examples/key_event/: main.rs
examples/key_event_glob/: main.rs
examples/snake/: .main.rs.swp  main.rs
examples/wave/: main.rs
src/: '  .canvas.rs.swn  .canvas.rs.swo  .canvas.rs.swp  .canvas_glob.rs.swp  .color.rs.swp  .compute.rs.swp  .elements.rs.swp  .lib.rs.swo  .lib.rs.swp  .math.rs.swp  .page.rs.swp  .setup.rs.swo  .setup.rs.swp  .text.rs.swp  .vector.rs.swp  canvas.rs  canvas_glob.rs  color.rs  compute.rs  elements.rs  fonts.rs  generic_shaders.rs  lib.rs  main.rs  mapping.rs  math.rs  page.rs  setup.rs  shaders.rs  text.rs  vector.rs  vertex.rs
src/fonts/: matches.txt  names.txt  scrpt1.py
