[package]
name = "metropolis"
version = "0.1.4"
authors = ["guy <guy123levinger@gmail.com>"]
edition = "2018"
description = "A high level easy to use graphics renderer"
repository = "http://github.com/GuyL99/metropolis"
readme = "README.md"
categories = ["games","graphics","gui"]
keywords = ["cli", "api","gui","gamedev","graphics"]
license = "MIT"
documentation = "https://docs.rs/metropolis/0.1.4/metro"
gitlab = { repository = "https://gitlab.com/GuyL99/graphics-renderer", branch = "master" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.14.0"
vulkano-shaders = "0.14.0"
vulkano-win = "0.15.0"
winit = "0.20.0-alpha3"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[lib]
name = "metro"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
