[package]
name = "metropolis"
version = "0.6.1"
authors = ["guy <guy123levinger@gmail.com>"]
edition = "2018"
description = "A high level easy to use graphics renderer"
repository = "http://github.com/GuyL99/metropolis"
readme = "README.md"
categories = ["games","graphics","gui"]
keywords = ["cli", "api","gui","gamedev","graphics"]
license = "MIT"
documentation = "https://docs.rs/metropolis/0.6.1/metropolis"
gitlab = { repository = "https://gitlab.com/GuyL99/graphics-renderer", branch = "master" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.16.0"
vulkano-shaders = "0.16.0"
vulkano-win = "0.16.0"
winit = "0.19.5"
rusttype = { version = "0.7", features = ["gpu_cache"] }
image = "0.22.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[lib]
name = "metropolis"

path = "src/lib.rs"

doctest = true

doc = true
